<resources>
    <string name="app_name">Sinav</string>
    <string name="button">Puan Hesaplama</string>
    <string name="button2">VKI</string>
    <string name="placeholder">Sayı giriniz; </string>
    <string name="button3">Hesapla</string>
    <string name="textview"></string>
    <string name="Vki">boy giriniz;</string>
    <string name="hesap">Kilo giriniz</string>
    <string name="btn">Hesapla</string>
    <string name="hesapla">Hesapla</string>
    <string name="textview5" />
    <string name="textview2" />
</resources>
